--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: akdovlet <akdovlet@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/15 16:05:42 by akdovlet          #+#    #+#              #
-#    Updated: 2024/05/03 12:35:22 by akdovlet         ###   ########.fr        #
+#    Updated: 2024/05/09 18:01:33 by akdovlet         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -68,6 +68,7 @@ SRC		:=	ak_countword.c			\
 			get_next_line_multi.c	\
 			printf_c_handler.c		\
 			printf_d_handler.c		\
+			printf_dprint.c			\
 			printf_ft_draft.c		\
 			printf_ft_int.c			\
 			printf_ft_printf.c		\
